--- a/css/handheld.css
+++ b/css/handheld.css
@@ -1,16 +1,19 @@
 @CHARSET "ISO-8859-1";
-/*
-html, body {
-	min-height: 100%;
+
+/* --------------- General ------------------------------ */
+/*finish for mobile*/
+
+.hide_for_handheld
+{
+	display:none;
 }
 
-*/
 body 
 {
 	color: #131313;
 	width: 100%;
 	margin:0px auto;
-	font-size: 1.8em;
+	font-size: 1em;
 }
 
 .header {
@@ -73,7 +76,8 @@ body
 	color: white;
 }
 
-/*
+
+/* --------------- Headers ------------------------------ */
 body h1{
 	 
 	 font-family: Arial, Helvetica, sans-serif;
@@ -101,11 +105,12 @@ h3
 
 hr
 {
- border: 0px; 
+ border: 0px; /* Für Firefox und Opera */
  border-top: solid 1px #FF0000;
- border-bottom: solid 1px #FFFFFF; 
+ border-bottom: solid 1px #FFFFFF; /* Für I.Explorer (Seiten-Hintergrundfarbe!) */
 }
 
+/* Hyperlinks */
 a:link {
 	 color:black; text-decoration:none;
 }
@@ -122,25 +127,26 @@ a:active {
 	color:black; text-decoration:underline; 
 }
 
-
+/*Message Area*/
 .messagearea{
 	margin: 10px;
 	font-weight: bold;
 }
 
+/*Error Message Area*/
 #error_msg_area{
 	color: red;
 }
+/* --------------- Header Area ------------------------------ */
 
 
-*/
+
 #shoppingcart {
 	float: right;
 	margin: 10px;
 	font-weight:bold;
 	color:#A0A0A0;
 }
-/*
 
 #shoppingcart tr
 {
@@ -196,16 +202,23 @@ th
 	font-weight:bold; color:black; text-decoration:underline; 
 }
 
-*/
+
+/* --------------- wrapper ------------------------ */
 .boxwrapper 
 {
 	margin: 5%;
 	width: 100%;
 }
-/*
+
 .colorboxwrapper
 {
 	margin: 40px auto;
+	width: 450px;
+}
+
+.colorboxwrapper_small
+{
+	margin: 10px auto;
 	width: 450px;
 }
 
@@ -221,7 +234,9 @@ th
 	clear:both;
 }
 
-*/
+
+/* --------------- Box Layouts ------------------------ */
+
 .whitebox 
 {
 	float: left;
@@ -340,6 +355,7 @@ legend
 	margin-right: 200px;
 	display: none;
 }
+
 /*
 .language_switch button
 {
@@ -370,7 +386,7 @@ legend
 	background: -moz-linear-gradient(top,  #00abf4,  #02def7); 
 }
 
-*/
+/* --------------- Main Menu ------------------------------ */
 .mainmenu ul
 {
 	margin:0px;
@@ -433,11 +449,12 @@ legend
 }
 
 #mainmenuelement{
+	display:none;
 	float: right;
 	margin-right:10px;
 }
-/*
 
+/* --------------- Registration Formular ------------------------------ */
 .registrationform{
 	text-align: left;
 }
@@ -498,6 +515,7 @@ legend
 .registrationform fieldset{
 	margin-top: 1em;
 }
+/* --------------- Customer Center -------------------------------------- */
 
 .customer_content_container {
 	width: 100%;
@@ -580,7 +598,7 @@ legend
 	color: white;
 }
 
-
+/* Customer Data Table */
 .customer_data {
 	vertical-align: top;
 	margin: 15px;
@@ -645,6 +663,7 @@ legend
 }
 
 
+/*----------------------Backend--------------------------*/
 
 .admin_logout{
 	float: right;
@@ -657,16 +676,22 @@ legend
 
 #admin_welcome
 {
-	margin-top: 90px;
+	margin-top: 80px;
 	margin-right:5px;
 }
 
 
+/*---------------- contact form --------------------------------------*/
 .contact_message{
 	padding: 10px;
 }
+
+.contact_message p{
+	text-align: left
+}
+
 .contact_message label{
-	width: 7em;
+	width: 8em;
     display: block;
     float: left;
 }
@@ -678,16 +703,20 @@ legend
 }
 .contact_message fieldset{
 	margin-top: 1em;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 .contact_message input[type="radio"]{
 	width: 5px;
 }
 .contact_message textarea{
-	width: 310px;
+	width: 325px;
 }
 .contact_message input[type="submit"]{
 	width: 100px;
+	float: left;
 }
+/*---------------- login form --------------------------------------*/
 
 .loginform label{
 	width: 7em;
@@ -710,5 +739,4 @@ legend
 	margin-left: 20px;
 }
 
-*/
 
