--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,34 +1,24 @@
-
-/* --------------- General ------------------------------ */
-/*sets body 100% in firefox*/
+@CHARSET "ISO-8859-1";
+/*
 html, body {
 	min-height: 100%;
 }
 
-.hide_for_screen
-{
-	display:none;
-}
-
+*/
 body 
 {
 	color: #131313;
-	width: 900px;
-	margin: 0 auto;
-	font-family: Arial, Helvetica, sans-serif;
-z
-	/*gradient color for all browser*/
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#F0F0F0'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#F0F0F0)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #00abf4,  #F0F0F0); /* for firefox 3.6+ */ 
-	background-repeat:no-repeat;
-
+	width: 100%;
+	margin:0px auto;
+	font-size: 1.8em;
 }
 
 .header {
 	background-color: #F0F0F0;
-	width: 900px;
-	height: 110px;
+	width: 100%;
+	height: 160px;
+	margin: 0px;
+	
 	-moz-box-shadow: inset 0 0 10px 0 #000;
 	-webkit-box-shadow: inset 0 0 10px 0 #000;
 	box-shadow: inset 0 0 10px 0 #000;
@@ -36,18 +26,15 @@ z
 
 .header_right {
 	float: right;
-	width: 450px;
-	height: 90px;
+	width: 30%;
+	
 	position: relative;
 	text-align: right;
-	margin-top: 10px;
-	margin-bottom: 10px;
 }
-
 
 .content_container {
 	background-color: #F0F0F0;
-	width: 900px;
+	width: 100%;
 	height: auto;
 	text-align:center;
 	position:relative;
@@ -63,27 +50,30 @@ z
 
 .footer
 {
-	width: 820px;
-	clear: both;
+	height: 80px;
 	position:relative;
 	top: 0px;
+	background-color:#131313;
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
-	padding: 10px 40px;
 	text-align: center;
 	font-size: 0.8em;
 	color: white;
-	text-align:left;
 	clear:both;
-	
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#131313', endColorstr='#7f7f7f'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#131313), to(#7f7f7f)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #131313,  #7f7f7f); /* for firefox 3.6+ */ 
-	
+	padding: 20px;
+	margin:0px;
 }
 
+.footer_copyright
+{
+	text-align: center;
+	position: absolute;
+	bottom:10px;
+	font-size: 0.9em;
+	color: white;
+}
 
-/* --------------- Headers ------------------------------ */
+/*
 body h1{
 	 
 	 font-family: Arial, Helvetica, sans-serif;
@@ -111,12 +101,11 @@ h3
 
 hr
 {
- border: 0px; /* Für Firefox und Opera */
+ border: 0px; 
  border-top: solid 1px #FF0000;
- border-bottom: solid 1px #FFFFFF; /* Für I.Explorer (Seiten-Hintergrundfarbe!) */
+ border-bottom: solid 1px #FFFFFF; 
 }
 
-/* Hyperlinks */
 a:link {
 	 color:black; text-decoration:none;
 }
@@ -133,26 +122,25 @@ a:active {
 	color:black; text-decoration:underline; 
 }
 
-/*Message Area*/
+
 .messagearea{
 	margin: 10px;
 	font-weight: bold;
 }
 
-/*Error Message Area*/
 #error_msg_area{
 	color: red;
 }
-/* --------------- Header Area ------------------------------ */
 
 
-
+*/
 #shoppingcart {
+	float: right;
 	margin: 10px;
 	font-weight:bold;
-	font-size: 0.8em;
 	color:#A0A0A0;
 }
+/*
 
 #shoppingcart tr
 {
@@ -208,23 +196,16 @@ th
 	font-weight:bold; color:black; text-decoration:underline; 
 }
 
-
-/* --------------- wrapper ------------------------ */
+*/
 .boxwrapper 
 {
-	margin: 40px auto;
-	width: 780px;
+	margin: 5%;
+	width: 100%;
 }
-
+/*
 .colorboxwrapper
 {
 	margin: 40px auto;
-	width: 450px;
-}
-
-.colorboxwrapper_small
-{
-	margin: 10px auto;
 	width: 450px;
 }
 
@@ -240,52 +221,45 @@ th
 	clear:both;
 }
 
-
-/* --------------- Box Layouts ------------------------ */
-
-
+*/
 .whitebox 
 {
 	float: left;
 	background-color: white;
 	border-radius: 10px;
 	box-shadow: 1px 1px 2px black;
-	margin: 10px;
+	margin: 5px 0;
+	width: 90%;
 }
 
 .box_3inRow
 {
-	width: 240px;
+	
 	height: auto;
 }
 
 .box_4inRow
 {
-	width: 175px;
 	height: auto;
 }
 
 .box_2inRow
 {
-	width: 370px;
 	height: auto;
 }
 
 .box_1inRow
 {
-	width: 760px;
 	height: auto;	
 }
 
 .internal
 {
-	width: 660px;
 	height: auto;
 }
 
 .slidebox
 {
-	height: auto;
 	display: none;
 }
 
@@ -301,13 +275,10 @@ fieldset
 
 legend
 {
-	font-weight:bold;
-	font-size: 1.2em;
 	text-align: left;
 }
 
 
-/* --------------- images ------------------------ */
 #littlelogo
 {
 	width: 120px;
@@ -323,33 +294,31 @@ legend
 }
 
 #logo {
-	width: 400px;
+	width: 60%;
 	margin: 10px;
 }
 
 #froxcloud_white
 {
-	height: 20px;
+	width:30%;
 	float:right;
 	bottom:0px;
+	margin-right: 50px;
 }
 
-
-
-/* --------------- Button Layouts ------------------------ */
 
 .buttonlayout_more
 {
 	width: 100%;
+	height: 60px;
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	color: white;
 
 	
-	/*Gradient color like logo color with "ultimate css gradient generator" */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #7f7f7f,  #131313); /* for firefox 3.6+ */ 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313');
+	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); 
+	background: -moz-linear-gradient(top,  #7f7f7f,  #131313);
 
 }
 
@@ -357,28 +326,29 @@ legend
 {
 	width: 100%;
 	color: white;
+	height: 60px;
 	
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#02def7'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#02def7)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #00abf4,  #02def7); /* for firefox 3.6+ */ 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#02def7');
+	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#02def7)); 
+	background: -moz-linear-gradient(top,  #00abf4,  #02def7); 
 }
 
-/* -------------------Language Switch Buttons---------------*/
 
 .language_switch
 {
 	float:right;
 	margin-right: 200px;
+	display: none;
 }
-
+/*
 .language_switch button
 {
 	float:right;
 	color: white;
 	font-size: 0.6em;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #7f7f7f,  #131313); /* for firefox 3.6+ */ 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313'); 
+	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); 
+	background: -moz-linear-gradient(top,  #7f7f7f,  #131313); 
 }
 
 #german
@@ -395,57 +365,57 @@ legend
 
 .language_switch button.active
 {
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#02def7'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#02def7)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #00abf4,  #02def7); /* for firefox 3.6+ */ 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#02def7'); 
+	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#02def7)); 
+	background: -moz-linear-gradient(top,  #00abf4,  #02def7); 
 }
 
-
-
-/* --------------- Main Menu ------------------------------ */
+*/
 .mainmenu ul
 {
-	margin:0;
+	margin:0px;
 	padding:0;
 	list-style-type:none;
 	width:auto;
 	position:relative;
 	display:block;
-	height:30px;
-	font-size:12px;
+	height:65px;
 	font-weight:bold;
-	background:transparent url(../images/nav_bg.png) repeat-x top left;
 	font-family:Arial, Helvetica, sans-serif;
 	border-bottom:1px solid #000000;
 	border-top:1px solid #000000;
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313'); /* for IE */
 	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); /* for webkit browsers */
 	background: -moz-linear-gradient(top,  #7f7f7f,  #131313); /* for firefox 3.6+ */ 
+	
 }
 
 .mainmenu li
 {
-	display:block;
 	float:left;
-	margin:0;
-	padding:0;
+	margin: 0px;
+	height:100%;
+	width:auto;
+	padding: 0 5px 0 5px;
+	
 }
 	
 .mainmenu li a
 {
+	text-align:center;
 	display:block;
 	float:left;
 	color:#999999;
-	text-decoration:none;
 	font-weight:bold;
-	padding:8px 20px 0 20px;
+	width: 100%;
+	padding: 0 5px 0 5px;
+	height: 100%;
+	
 }
 	
 .mainmenu li a:hover
 {	
-	color:#FFFFFF;
-	height:22px;
-	background:transparent url(../images/nav_bg.png) 0px -30px no-repeat;		
+	color:#FFFFFF; 
 }
 	
 .mainmenu li a.active 
@@ -453,18 +423,21 @@ legend
 	color: white;
 	display:inline;
 	height:22px;
-	background:transparent url(../images/nav_bg.png) 0px -30px no-repeat;	
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#02def7'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#02def7)); /* for webkit browsers */
+	background: -moz-linear-gradient(top,  #00abf4,  #02def7); /* for firefox 3.6+ */ 
+	
 	float:left;
 	margin:0;
+	height:100%;
 }
 
 #mainmenuelement{
 	float: right;
+	margin-right:10px;
 }
+/*
 
-
-
-/* --------------- Registration Formular ------------------------------ */
 .registrationform{
 	text-align: left;
 }
@@ -525,7 +498,6 @@ legend
 .registrationform fieldset{
 	margin-top: 1em;
 }
-/* --------------- Customer Center -------------------------------------- */
 
 .customer_content_container {
 	width: 100%;
@@ -608,7 +580,7 @@ legend
 	color: white;
 }
 
-/* Customer Data Table */
+
 .customer_data {
 	vertical-align: top;
 	margin: 15px;
@@ -673,7 +645,6 @@ legend
 }
 
 
-/*----------------------Backend--------------------------*/
 
 .admin_logout{
 	float: right;
@@ -686,22 +657,16 @@ legend
 
 #admin_welcome
 {
-	margin-top: 80px;
+	margin-top: 90px;
 	margin-right:5px;
 }
 
 
-/*---------------- contact form --------------------------------------*/
 .contact_message{
 	padding: 10px;
 }
-
-.contact_message p{
-	text-align: left
-}
-
 .contact_message label{
-	width: 8em;
+	width: 7em;
     display: block;
     float: left;
 }
@@ -713,20 +678,16 @@ legend
 }
 .contact_message fieldset{
 	margin-top: 1em;
-	padding-left: 20px;
-	padding-right: 20px;
 }
 .contact_message input[type="radio"]{
 	width: 5px;
 }
 .contact_message textarea{
-	width: 325px;
+	width: 310px;
 }
 .contact_message input[type="submit"]{
 	width: 100px;
-	float: left;
 }
-/*---------------- login form --------------------------------------*/
 
 .loginform label{
 	width: 7em;
@@ -749,4 +710,5 @@ legend
 	margin-left: 20px;
 }
 
+*/
 
