--- a/css/handheld.css
+++ b/css/handheld.css
@@ -8,7 +8,7 @@ body
 	color: #131313;
 	width: 100%;
 	margin: 0 auto;
-	
+	float:right;
 	font-size:1em;
 	font-family: Arial, Helvetica, sans-serif;
 }
@@ -18,7 +18,7 @@ body
 .header {
 	background-color: #F0F0F0;
 	width: 100%;
-	height: 90px;
+	height: 20%;
 	
 	-moz-box-shadow: inset 0 0 10px 0 #000;
 	-webkit-box-shadow: inset 0 0 10px 0 #000;
@@ -28,18 +28,17 @@ body
 .header_right {
 	float: right;
 	width: 110px;
-	height: 70px;
 	position: relative;
 	text-align: right;
 	margin:2%;
 	font-size: 0.2;
+	display:none;
 }
 
 
 .content_container {
 	background-color: #F0F0F0;
 	width: 100%;
-	height: auto;
 	text-align:center;
 	position:relative;
 	float: left;
@@ -57,8 +56,8 @@ body
 	width: 100%;
 	height: 45px;
 	clear: both;
+	bottom:0px;
 	position:relative;
-	top: 0px;
 	color: white;
 	text-align:left;
 	clear:both;
@@ -78,7 +77,7 @@ body h1{
 	 font-size: 1.1em;
 	 letter-spacing: 0.2em;
 	 line-height: 1.1em;
-        margin: 20px 15px;
+     margin: 20px 15px;
 	 text-align: left;
 	 text-transform: uppercase;
 	 color: #333;
@@ -154,12 +153,14 @@ a:active {
 {
 	clear: both;
 }
-
+*/
 table
 {
+	font-size:0.3em;
 	border-collapse:collapse;
 	width: 100%;
 	text-align: center;
+	margin-bottom:10px;
 	
 }
 
@@ -170,16 +171,17 @@ td
 	border-right: 1px solid black;
 	border-left: 1px solid black;
 	border-bottom: 1px solid black;
-	padding:5px;
+	padding:1px;
+	text-align:left;
 }
 
-}
+
 
 th
 {
-	border-bottom: 5px solid black;
+	border-bottom: 1px solid black;
 }
-
+/*
 #shoppingcart a:focus { 
 	font-weight:bold; color:black; text-decoration:underline; 
 }
@@ -194,21 +196,16 @@ th
 
 .boxwrapper 
 {
-	width: 100%;
+	width: 95%;
+	margin: 0 auto;
 }
 
-/*.colorboxwrapper
+.internalwrapper
 {
-	margin: 40px auto;
-	width: 450px;
+	font-size:0.5;
+	width: 95%;
+	margin: 0 auto;
 }
-
-.colorboxwrapper_small
-{
-	margin: 10px auto;
-	width: 450px;
-}*/
-
 
 .whitebox 
 {
@@ -216,7 +213,7 @@ th
 	background-color: white;
 	border-radius: 10px;
 	box-shadow: 1px 1px 2px black;
-	margin: 5%;
+	width:100%;
 	
 }
 
@@ -255,7 +252,8 @@ fieldset
 {
 	border: black solid 1px;
 	border-radius: 10px;
-	margin:10px;
+	margin:5px;
+	padding:0;
 }
 
 legend
@@ -277,7 +275,7 @@ legend
 
 
 #logo {
-	width:58%;
+	width:70%;
 	float:left;
 	margin: 2%;
 }
@@ -356,15 +354,17 @@ legend
 */
 .mainmenu ul
 {
+	
+	float:left;
 	margin:0;
 	padding:0;
 	list-style-type:none;
 	width:100%;
 	position:relative;
-	display:block;
 	height:60px;
 	font-size:0.7em;
 	font-weight:bold;
+	background:transparent url(../images/nav_bg.png) repeat-x top left;
 	font-family:Arial, Helvetica, sans-serif;
 	border-bottom:1px solid #000000;
 	border-top:1px solid #000000;
@@ -380,7 +380,7 @@ legend
 	margin:0;
 	padding:0;
 	width:20%;
-	text-align:center;
+	text-align: center;
 }
 	
 .mainmenu li a
@@ -392,27 +392,40 @@ legend
 	font-weight:bold;
 	height:100%;
 	width:100%;
+
 }
 	
 .mainmenu li a.mm_active 
 {
 	color: white;
 	display:inline;
-	float:left;
 	margin:0;
+	width:100%;
 	height:100%;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#02def7'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#02def7)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #00abf4,  #02def7); /* for firefox 3.6+ */ 
+	background:transparent url(../images/nav_bg.png) 0px 0px no-repeat;
 }
 
-#mainmenuelement{
-	float: right;
-	width:auto;
-	display:none;
+#mainmenuelement
+{
+	float:right;
+	width:40%;
 }
 
-/*
+#help
+{
+display:none;
+}
+
+#imprint
+{
+display:none;
+}
+
+#help
+{
+display:none;
+}
+
 .registrationform{
 	text-align: left;
 }
@@ -478,10 +491,9 @@ legend
 	width: 100%;
 	text-align: left;
 	float: left;
-	margin: 5px;
 }
 
-
+/*
 #customer_header {
     font-size: 0.8em;
     font-weight: bold;
@@ -511,22 +523,22 @@ legend
 	width: 680px;
 	text-align: left;
 }
-
+*/
 .customermenu {
-	border-radius: 10px;
 	background: #333;
 	list-style: none;
-	margin: 15px;
-	padding: 0;
 	float: left;
-	border:1px solid #000000;
+	width:100%;
 }
+
 .customermenu ul {
 	list-style-type:none;
 	padding: 0;
 	margin: 5px;
 }
 .customermenu li {
+	float:left;
+	width:33%;
 	font: 67.5% 'Lucida Sans Unicode', 'Bitstream Vera Sans', 'Trebuchet Unicode MS', 'Lucida Grande', Verdana, Helvetica, sans-serif;
 	color:#999999;
 	margin: 0;
@@ -559,11 +571,11 @@ legend
 .customer_data {
 	vertical-align: top;
 	margin: 15px;
+	font-size:0.6em;
 }
 
 .customer_data th{
 	color: 1874CD;
-	width: 200px;
     text-align: left;
     vertical-align: top;
     padding-bottom: 20px;
@@ -581,7 +593,6 @@ legend
 }
 
 .edit_cust_data{
-	margin: 15px;
 }
 
 .edit_cust_data label{
@@ -619,7 +630,7 @@ legend
 	
 }
 
-
+/*
 
 .admin_logout{
 	float: right;
